--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
 
                     <div class="portafolio-item">
                         <div class="portafolio-item-thumbnail">
-                            <video src="video/CINEMA ― 100% PURO & REAL.mp4" autoplay loop controls muted width="321" height="180"></video>
+                            <video src="video/CINEMA ― 100 PURO & REAL.mp4" autoplay loop controls muted width="321" height="180"></video>
                         </div>
                         <h3 class="portafolio-item-title">CINEMA ― 100% PURO & REAL</h3>
                         <button type="button" class="btn view-project-btn">Ver Proyecto</button>
@@ -293,7 +293,7 @@
                                     </li>
                                     <li>Rol - <span>BackEnd/FrontEnd</span></li>
                                     <li>Ver Online - <span><a href="#"
-                                                target="_blank">https://juanpg28.github.io/forms/</a></span></li>
+                                                target="_blank">https://juanpg28.github.io/cinema/</a></span></li>
                                 </ul>
                             </div>
                         </div>
